tests/error_tests/illegal_returns.tau
#a:= main();
b:= return 3;
public func main(){
    return 3;
}